    any(), has(), and contains() when proxying
    a many-to-one scalar attribute to a one-to-many
    collection (i.e. the reverse of the 'typical'
    association proxy use case)  [ticket:2054]

- examples
  - Beaker example now takes into account 'limit'
    and 'offset', bind params within embedded
    FROM clauses (like when you use union() or 
    from_self()) when generating a cache key.

0.7.0b1
=======
- Detailed descriptions of each change below are 
  described at:
  http://www.sqlalchemy.org/trac/wiki/07Migration

- general
  - New event system, supercedes all extensions, listeners,
    etc.  [ticket:1902]

  - Logging enhancements
    [ticket:1926]

  - Setup no longer installs a Nose plugin
    [ticket:1949]

  - The "sqlalchemy.exceptions" alias in sys.modules
    has been removed.   Base SQLA exceptions are 
    available via "from sqlalchemy import exc".
    The "exceptions" alias for "exc" remains in 
    "sqlalchemy" for now, it's just not patched into 
    sys.modules.

- orm
  - More succinct form of query.join(target, onclause)
    [ticket:1923]

  - Hybrid Attributes, implements/supercedes synonym()
    [ticket:1903]

  - Rewrite of composites [ticket:2008]

  - Mutation Event Extension, supercedes "mutable=True"

  - PickleType and ARRAY mutability turned off by default
     [ticket:1980]

  - Simplified polymorphic_on assignment
    [ticket:1895]

  - Flushing of Orphans that have no parent is allowed
    [ticket:1912]

  - Adjusted flush accounting step to occur before
    the commit in the case of autocommit=True.  This allows
    autocommit=True to work appropriately with 
    expire_on_commit=True, and also allows post-flush session
    hooks to operate in the same transactional context 
    as when autocommit=False.  [ticket:2041]

  - Warnings generated when collection members, scalar referents 
    not part of the flush
    [ticket:1973]

  - Non-`Table`-derived constructs can be mapped
    [ticket:1876]
